Allow users without variable in the password